--- a/todo/templates/todo/base.html
+++ b/todo/templates/todo/base.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
           integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 
-    <title>会員登録サンプル</title>
+    <title>MyToDo</title>
 </head>
 <body>
     <!-- ナビバー -->
@@ -22,6 +22,12 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           {% if user.is_authenticated %}
+          <li>
+            <a class="nav-item nav-link" href="{% url 'todo:user_detail' user.pk %}">ユーザー情報閲覧</a>
+          </li>
+          <li>
+            <a class="nav-item nav-link" href="{% url 'todo:user_update' user.pk %}">ユーザー情報更新</a>
+          </li>
           <li>
             <a class="nav-item nav-link" href="{% url 'todo:logout' %}">ログアウト</a>
           </li>
