--- a/todo/templates/todo/top.html
+++ b/todo/templates/todo/top.html
@@ -1,20 +1,4 @@
 {% extends "todo/base.html" %}
 {% block content %}
-<form action="" method="post">
-    <div class="col-md-6 offset-md -3">
-        <div class="card">
-            <div class="card-body">
-                {{ form.non_field_errors }}
-                {% for field in form %}
-                    {{ field }}
-                    {{ field.errors }}
-                    <hr>
-                {% endfor %}
-                <button type="submit" class="btn btn-success btn-lg btn-block">ログイン</button>
-                <input type="hidden" name="next" value="{{ next }}"/>
-                {% csrf_token %}
-            </div>
-        </div>
-    </div>
-</form>
+<p>MyToDo</p>
 {% endblock %}
