--- a/todo/templates/todo/login.html
+++ b/todo/templates/todo/login.html
@@ -19,6 +19,7 @@
     <div class="card col-md-6">
         <div class="card-body">
             <a href="{% url 'todo:user_create' %}" class="btn btn-success btn-lg btn-block">ユーザー登録</a>
+            <a href="{% url 'todo:password_reset' %}" class="btn btn-success btn-lg btn-block">パスワードを忘れた方</a>
         </div>
     </div>
 </div>
