--- a/todo/templates/todo/base.html
+++ b/todo/templates/todo/base.html
@@ -34,6 +34,9 @@
           <li>
             <a class="nav-item nav-link" href="{% url 'todo:password_change' %}">パスワードの変更</a>
           </li>
+          <li>
+            <a class="nav-item nav-link" href="{% url 'todo:email_change' %}">メールアドレスの変更</a>
+          </li>
           {% else %}
           <li class="nav-item">
             <a class="nav-item nav-link" href="{% url 'todo:login' %}">
