--- a/todo/templates/todo/login.html
+++ b/todo/templates/todo/login.html
@@ -10,7 +10,7 @@
                     {{ field.errors }}
                     <hr>
                 {% endfor %}
-                <button type="submit" class="btn btn-success btn-lg btn-block">ログイン</button>
+                <button type="submit" class="btn btn-success btn-lg btn-block">Login</button>
                 <input type="hidden" name="next" value="{{ next }}"/>
                 {% csrf_token %}
             </form>
