--- a/todo/templates/todo/password_change_done.html
+++ b/todo/templates/todo/password_change_done.html
@@ -2,6 +2,6 @@
 {% block content %}
     <p>
         パスワードを変更しました。<br>
-        <a class="btn btn-primary btn-lg" href="{% url 'todo:login' %}">ログイン</a>
+        <a class="btn btn-primary btn-lg" href="{% url 'todo:login' %}">Login</a>
     </p>
 {% endblock %}
