--- a/todo/templates/todo/password_reset_complete.html
+++ b/todo/templates/todo/password_reset_complete.html
@@ -2,6 +2,6 @@
 {% block content %}
 <p>
     パスワード再設定を完了しました。<br>
-    <a class="btn btn-primary btn-lg" href="{% url 'todo:login' %}">ログイン</a>
+    <a class="btn btn-primary btn-lg" href="{% url 'todo:login' %}">Login</a>
 </p>
 {% endblock %}
