--- a/todo/templates/todo/user_create_complete.html
+++ b/todo/templates/todo/user_create_complete.html
@@ -3,6 +3,6 @@
 <p>
     本登録が完了しました。<br>
     登録されたメールアドレスとパスワードでログインしてください。<br>
-    <a class="btn btn-primary btn-lg" href="{% url 'todo:login' %}">ログイン</a>
+    <a class="btn btn-primary btn-lg" href="{% url 'todo:login' %}">Login</a>
 </p>
 {% endblock %}
