--- a/todo/templates/todo/user_create_done.html
+++ b/todo/templates/todo/user_create_done.html
@@ -3,5 +3,6 @@
 <p>
     ユーザー登録確認メールを送信しました。まだ、ユーザー登録は完了していません。<br>
     確認メールを送信しましたので、確認メールに記載されているリンクから本登録を行ってください。
+    ＊送信されたメールが迷惑メールに振り分けられた可能性があるので、ご注意ください。
 </p>
 {% endblock %}
