--- a/todo/templates/todo/email_change_done.html
+++ b/todo/templates/todo/email_change_done.html
@@ -2,5 +2,6 @@
 {% block content %}
 <p>
     確認メールに記載されているリンクをクリックすると、アドレスが変更されます。
+    ＊送信されたメールが迷惑メールに振り分けられた可能性があるので、ご注意ください。
 </p>
 {% endblock %}
