--- a/todo/templates/todo/password_reset_done.html
+++ b/todo/templates/todo/password_reset_done.html
@@ -3,5 +3,6 @@
 <P>
     パスワード再設定用のメールを送信しました。<br>
     メールに記載されているリンクから再設定を行ってください。
+    ＊送信されたメールが迷惑メールに振り分けられた可能性があるので、ご注意ください。
 </P>
 {% endblock %}
